<resources>
    <string name="app_name">Sivano</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_best">The Best</string>
    <string name="on_shop">On Shopping</string>
    <string name="easier">The easiest way to find the best product with your</string>
    <string name="fav">favorite brand or nearest location</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm">Confirm</string>
    <string name="read_more">read more</string>
    <string name="read_less">read less</string>
    <string name="google_maps_API_key">AIzaSyATsM2BbAtSlRVxjd6D4B_50N7TexvvbO4</string>
</resources>