<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/onboard"
    tools:context=".ui.fragment.setup.SignUpFragment">

      <TextView
          android:id="@+id/welcomeBack"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintBottom_toTopOf="@id/favorite_text"
          android:text="Welcome To Sivano"
          android:layout_marginStart="@dimen/_20sdp"
          android:layout_marginBottom="@dimen/_5sdp"
          android:fontFamily="@font/poppins_bold"
          android:textColor="@color/black_app"
          android:textSize="@dimen/_20ssp"
          />
      <TextView
          android:id="@+id/favorite_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintBottom_toTopOf="@id/cardView"
          android:text="Let's create an account"
          android:layout_marginStart="@dimen/_20sdp"
          android:layout_marginBottom="@dimen/_25sdp"
          android:fontFamily="@font/poppins_medium"
          android:textColor="@color/black_app"
          android:textSize="@dimen/_14ssp"
          />

      <com.google.android.material.card.MaterialCardView
          android:id="@+id/cardView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:cardPreventCornerOverlap="false"
          style="@style/CustomCardViewStyle"
          >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                  <TextView
                      android:id="@+id/signUpText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/_12sdp"
                      android:fontFamily="@font/poppins_medium"
                      android:gravity="center"
                      android:text="@string/sign_up"
                      android:textColor="@color/black_app"
                      android:textSize="@dimen/_17ssp"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      />
                  <com.google.android.material.textfield.TextInputLayout
                      android:id="@+id/inputTextLayoutName"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/setup_ed_txt"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/signUpText"
                      android:layout_marginTop="@dimen/_10sdp"
                      android:layout_marginStart="@dimen/_18sdp"
                      android:layout_marginBottom="@dimen/_5sdp"
                      android:layout_marginEnd="@dimen/_18sdp"
                      android:hint="@string/name"
                      >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="@dimen/_11ssp"
                            android:paddingTop="@dimen/_10ssp"
                            />
                  </com.google.android.material.textfield.TextInputLayout>
                  <com.google.android.material.textfield.TextInputLayout
                      android:id="@+id/inputTextLayoutEmail"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/setup_ed_txt"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/inputTextLayoutName"
                      android:layout_marginTop="@dimen/_10sdp"
                      android:layout_marginStart="@dimen/_18sdp"
                      android:layout_marginBottom="@dimen/_5sdp"
                      android:layout_marginEnd="@dimen/_18sdp"
                      android:hint="@string/email"
                      >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="@dimen/_11ssp"
                            android:paddingTop="@dimen/_10ssp"
                            />
                  </com.google.android.material.textfield.TextInputLayout>
                  <com.google.android.material.textfield.TextInputLayout
                      android:id="@+id/inputTextLayoutMobilePhone"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/setup_ed_txt"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/inputTextLayoutEmail"
                      android:layout_marginTop="@dimen/_10sdp"
                      android:layout_marginStart="@dimen/_18sdp"
                      android:layout_marginBottom="@dimen/_5sdp"
                      android:layout_marginEnd="@dimen/_18sdp"
                      android:hint="@string/mobile_number"
                      app:prefixText="+20"
                      app:prefixTextColor="@color/black"
                      >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputTextMobilePhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:paddingTop="@dimen/_10ssp"
                            android:textSize="@dimen/_11ssp" />
                  </com.google.android.material.textfield.TextInputLayout>
                  <com.google.android.material.textfield.TextInputLayout
                      android:id="@+id/inputTextLayoutPassword"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/setup_ed_txt"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/inputTextLayoutMobilePhone"
                      android:layout_marginTop="@dimen/_10sdp"
                      android:layout_marginStart="@dimen/_18sdp"
                      android:layout_marginBottom="@dimen/_5sdp"
                      android:layout_marginEnd="@dimen/_18sdp"
                      android:hint="@string/password"
                      >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="@dimen/_11ssp"
                            android:paddingTop="@dimen/_10ssp"
                            />
                  </com.google.android.material.textfield.TextInputLayout>

                  <com.google.android.material.button.MaterialButton
                      android:id="@+id/signup_btn"
                      style="@style/button_style"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/_30sdp"
                      android:text="@string/sign_up"
                      android:textSize="@dimen/_12ssp"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/inputTextLayoutPassword"
                      android:layout_marginStart="@dimen/_18sdp"
                      android:layout_marginBottom="@dimen/_5sdp"
                      android:layout_marginEnd="@dimen/_18sdp"
                      />
                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/signup_btn"
                      android:orientation="horizontal"
                      android:layout_marginBottom="@dimen/_10sdp"
                      android:paddingBottom="@dimen/_15sdp"
                      >
                        <TextView
                            android:id="@+id/haveAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:text="Do you have an account? "
                            android:textSize="@dimen/_11ssp"
                            android:fontFamily="@font/poppins"/>

                        <TextView
                            android:id="@+id/sign_in_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/sign_in"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp"
                           />

                  </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
      <!--      <com.google.android.material.card.MaterialCardView-->
<!--          android:layout_width="match_parent"-->
<!--          android:layout_height="@dimen/_180sdp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            style="@style/card_setup"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>